# vish

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: CLAUDE.md
.claude/docs/: soul.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-28-ui-polish.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
scripts/: bump-version.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/embedding/: client.rs  types.rs
src-tauri/src/search/: mod.rs
src-tauri/src/store/: vector.rs
src/components/: GroveLogo.tsx  IndexingScreen.tsx  PreviewPane.tsx  ResultList.tsx  SearchBar.tsx  SetupScreen.tsx
src/components/Settings/: SettingsPanel.tsx
src/hooks/: useAppState.ts  usePreview.ts
