[package]
name = "vish"
version = "0.3.0"
description = "Vish — Semantic desktop search powered by Gemini"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono"] }
dirs = "5"
walkdir = "2"
notify = "6"
tiktoken-rs = "0.5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }

